<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activities.merchant.RegisterConfirmationActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/registration_confirmation"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/belgrano"
        android:text="@string/wooooo_congratulations"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <FrameLayout
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundGravity="center" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="165dp"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:background="@drawable/food_form_border"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/food_successfully_registered"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/pay_attention_to_your_cell_phone"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="25dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/thank_you"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="20sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/register_confirmation" />
    </FrameLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/signup_button_border"
        android:fontFamily="@font/roboto_bold"
        android:padding="12dp"
        android:text="@string/back_to_home"
        android:textColor="@color/white"
        app:icon="@drawable/ic_baseline_home_24" />


</LinearLayout>