<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activities.ong.OngProfileFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/menu_profile"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profilePicture"
            android:layout_width="114dp"
            android:layout_height="114dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background"
            app:shapeAppearance="@style/ShapeAppearance.ImageView" />

        <TextView
            android:id="@+id/profileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/roboto_bold"
            android:text="Joao Carlos"
            android:textColor="@color/black"
            android:textSize="26sp" />
    </LinearLayout>


    <Button
        android:id="@+id/myDataButton"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/my_data"
        android:textSize="16sp" />

    <Button
        android:id="@+id/productsButton"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/advertised_products"
        android:textSize="16sp" />

    <Button
        android:id="@+id/accountExitButton"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/logout"
        android:textSize="16sp" />

</LinearLayout>