<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.merchant.NewProductActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/menu_add_food"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="8dp"
                android:paddingBottom="25dp"
                android:background="@drawable/food_form_border"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/new_food_intro"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/foodImage"
                    android:layout_marginTop="12dp"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:visibility="gone"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/addFoodButton"
                    android:layout_width="318dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/signup_button_border"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/add_food_image"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:icon="@drawable/ic_outline_camera_alt_24" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="328dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:hint="@string/product_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/productNameField"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/edit_text_border"
                        android:ems="10"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="328dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:hint="@string/amount"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/quantityField"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/edit_text_border"
                        android:ems="10"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="328dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/category"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/categoryField"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@drawable/edit_text_border"
                        android:visibility="gone" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/donation_text"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/donationSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/free_donation"
                        android:textColor="@color/black" />
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/priceInputLayout"
                    android:layout_width="328dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:hint="@string/price"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/priceField"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/edit_text_border"
                        android:ems="10"
                        android:inputType="numberDecimal" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/submitProductButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/signup_button_border"
                    android:fontFamily="@font/roboto_bold"
                    android:padding="12dp"
                    android:text="@string/register_product"
                    android:textColor="@color/white"
                    app:icon="@drawable/ic_baseline_add_circle_outline_24" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>