<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingHorizontal="12dp"
    tools:context=".activities.ong.NotificationFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/menu_notifications"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:layout_marginHorizontal="30dp" >
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/notificationSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/email_notification_switch"
            android:layout_alignParentEnd="true" />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/new_notifications"

        android:textColor="@color/black"
        android:textSize="22sp" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notificationRecycleView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>